--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "dignity-health-awareness",
     "private": true,
     "version": "0.0.0",
+    "homepage": "https://Dignifiedmt.github.io/dignity-health",
     "type": "module",
     "scripts": {
         "dev": "vite",
